<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add">Add</string>
    <string name="add_url">Add New Playlist</string>
    <string name="added_to_favourites">Added to favourites</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_failiure_title">Issue Detected</string>
    <string name="app_name">Sportzfy</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authentication_required">Authentication required</string>
    <string name="back">Back</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="changelog">"What's New"</string>
    <string name="channels">Channels</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chose">Choose</string>
    <string name="chose_category">Choose Category</string>
    <string name="chose_file">Choose Playlist File</string>
    <string name="clear_app_data">Clear App Data</string>
    <string name="clear_app_data_message">"This will remove this app's data on your device, including saved settings, favourites, and playlists. Continue?"</string>
    <string name="clear_app_data_title">Clear App Data</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">6d186c0b95204742a1f98497720d6eae</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connecting_to_server">Connecting to server…</string>
    <string name="connection_error">Error connecting to server!</string>
    <string name="cookie_value">Cookie Value</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="copyright">Copyright</string>
    <string name="copyright_message">"Sportzfy does not stream any of the channels included in this application, all the streaming links are from third party websites available freely on the internet. We're just giving way to stream and all content is the copyright of their owner. If you have any complaints please mail us at: cartwrightkathrin011@proton.me"</string>
    <string name="crash_log_dialog">Crash Log Dialog</string>
    <string name="custom_browser_close">Close</string>
    <string name="custom_browser_title">Loading…</string>
    <string name="data_usage">Data Consumption</string>
    <string name="data_usage_14d">14 Days</string>
    <string name="data_usage_1y">1 Year</string>
    <string name="data_usage_30d">1 Month</string>
    <string name="data_usage_7d">7 Days</string>
    <string name="data_usage_hint">Data used by this app.</string>
    <string name="data_usage_mobile">Mobile</string>
    <string name="data_usage_other">Other</string>
    <string name="data_usage_range">Selected</string>
    <string name="data_usage_today">Today</string>
    <string name="data_usage_total">Total</string>
    <string name="data_usage_wifi">Wi-Fi</string>
    <string name="default_notification_channel_name">Now playing</string>
    <string name="delete">Delete</string>
    <string name="description">\@null</string>
    <string name="dest_title">destination title</string>
    <string name="developer_options_enabled">Developer Options Enabled</string>
    <string name="download">Download</string>
    <string name="drm_license_url">DRM License URL</string>
    <string name="email">Email</string>
    <string name="empty_error">No %s Found</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_playlist_title">Enter Playlist Title</string>
    <string name="enter_playlist_url">Enter Playlist URL</string>
    <string name="enter_server_port">Enter Server:Port</string>
    <string name="enter_username">Enter Username</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="events_fallback_failed_message">Could not load events after checking all fallback servers. Try Refresh. If it keeps failing, clear app data and reopen the app.</string>
    <string name="exit">Exit</string>
    <string name="exit_confirm_message">Are you sure to exit app?</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Current mode: Repeat all. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_off_description">Current mode: Repeat none. Toggle repeat mode.</string>
    <string name="exo_controls_repeat_one_description">Current mode: Repeat one. Toggle repeat mode.</string>
    <string name="favourties">Favourites</string>
    <string name="floating_player">Floating Player</string>
    <string name="home_title" />
    <string name="join_us">Join Us</string>
    <string name="match_header_balls">B</string>
    <string name="match_header_batsman">Batsman</string>
    <string name="match_header_fours">4s</string>
    <string name="match_header_runs">R</string>
    <string name="match_header_sixes">6s</string>
    <string name="match_header_strike_rate">SR</string>
    <string name="network_player">Network Player</string>
    <string name="notic">Notice</string>
    <string name="notice_close">Close</string>
    <string name="playlists">Playlists</string>
    <string name="refresh">Refresh</string>
    <string name="serach">Search</string>
    <string name="share">Share Our App</string>
    <string name="title_cats">Categories</string>
    <string name="title_high">Highlights</string>
    <string name="tv_channels_header">Channels</string>
    <string name="tv_mode_startup">Open TV Mode on startup</string>
    <string name="update">Update App</string>
    <string name="update_app">Update Sportzfy App</string>
    <string name="update_later">Update Later</string>
    <string name="update_now">Update Now</string>
    <string name="update_txt_message">A newer update of the app is available. Please update now, as this version will soon stop working.</string>
    <string name="video_quality_setting">"Video Quality Setting
"</string>
    <string name="website">Website</string>
</resources>