<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_list" android:id="@id/all_channels_option" android:title="@string/tv_channels_header" />
    <item android:icon="@drawable/ic_network_play" android:id="@id/network_player_option" android:title="@string/network_player" />
    <item android:icon="@drawable/ic_playlist" android:id="@id/playlists_option" android:title="@string/playlists" />
    <item android:icon="@drawable/ic_pip" android:id="@id/floating_player_option" android:title="@string/floating_player" />
    <item android:icon="@drawable/ic_settings" android:id="@id/quality_option" android:title="@string/video_quality_setting" />
    <item android:icon="@drawable/ic_data_usage" android:id="@id/data_usage_option" android:visible="false" android:title="@string/data_usage" />
    <item android:icon="@drawable/ic_crash_report" android:id="@id/crash_log_toggle_option" android:title="@string/crash_log_dialog" app:actionViewClass="androidx.appcompat.widget.SwitchCompat" />
    <item android:icon="@drawable/ic_list" android:id="@id/tv_mode_startup_option" android:visible="false" android:title="@string/tv_mode_startup" app:actionViewClass="androidx.appcompat.widget.SwitchCompat" />
    <item android:icon="@drawable/ic_notifications_black_24dp" android:id="@id/notice_option" android:title="@string/notic" />
    <item android:icon="@drawable/ic_chat" android:id="@id/chat_option" android:title="@string/join_us" />
    <item android:icon="@drawable/ic_copyright" android:id="@id/copyright_option" android:title="@string/copyright" />
    <item android:icon="@drawable/ic_share" android:id="@id/share_option" android:title="@string/share" />
    <item android:icon="@drawable/ic_email" android:id="@id/email_option" android:title="@string/email" />
    <item android:icon="@drawable/ic_update" android:id="@id/update_option" android:title="@string/update" />
    <item android:icon="@drawable/ic_exit" android:id="@id/exit_option" android:title="@string/exit" />
</menu>
