<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_search_glass" android:id="@id/option_search" android:orderInCategory="10" android:title="@string/serach" app:actionViewClass="androidx.appcompat.widget.SearchView" app:showAsAction="always|collapseActionView" />
    <item android:icon="@drawable/ic_star_glass" android:id="@id/option_fav" android:orderInCategory="20" android:title="@string/favourties" app:showAsAction="always" />
    <item android:icon="@drawable/ic_refresh_glass" android:id="@id/option_refresh" android:orderInCategory="30" android:title="@string/refresh" app:showAsAction="never" />
    <item android:icon="@drawable/ic_exit_glass" android:id="@id/option_exit" android:orderInCategory="40" android:title="@string/exit" app:showAsAction="never" />
</menu>
