<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@id/mobile_navigation" app:startDestination="@id/navigation_home"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <fragment android:label="@string/home_title" android:name="app.blaze.spofficialApp.fragments.HomeFragment" android:id="@id/navigation_home" />
    <fragment android:label="@string/title_cats" android:name="app.blaze.spofficialApp.fragments.CatsFragment" android:id="@id/navigation_cats">
        <action android:id="@id/action_navigation_cats_to_channelsFragment" app:destination="@id/channelsFragment" />
        <action android:id="@id/action_navigation_cats_to_playlist_nav" app:destination="@id/playlist_nav" />
    </fragment>
    <fragment android:label="@string/title_high" android:name="app.blaze.spofficialApp.fragments.HighlightsFragment" android:id="@id/navigation_highlights" />
    <fragment android:label="{cat}" android:name="app.blaze.spofficialApp.fragments.ChannelsFragment" android:id="@id/channelsFragment">
        <argument android:name="cat" app:argType="string" />
    </fragment>
    <fragment android:label="@string/tv_channels_header" android:name="app.blaze.spofficialApp.fragments.AllChannelsFragment" android:id="@id/allChannelsFragment" />
    <action android:id="@id/action_global_allChannelsFragment" app:destination="@id/allChannelsFragment" />
    <fragment android:label="@string/network_player" android:name="app.blaze.spofficialApp.fragments.NetworkFragment" android:id="@id/networkFragment">
        <argument android:name="defUrl" app:argType="string" app:nullable="true" />
    </fragment>
    <fragment android:label="@string/playlists" android:name="app.blaze.spofficialApp.fragments.PlaylistsFragment" android:id="@id/playlistsFragment">
        <action android:id="@id/action_playlistsFragment_to_playlist_nav" app:destination="@id/playlist_nav" />
        <argument android:name="defUrl" app:argType="string" app:nullable="true" />
    </fragment>
    <action android:id="@id/action_global_playlistsFragment" app:destination="@id/playlistsFragment" />
    <activity android:label="activity_player" android:name="app.blaze.spofficialApp.activities.PlayerActivity" android:id="@id/playerActivity">
        <argument android:name="title" app:argType="string" app:nullable="true" />
        <argument android:name="parent" android:defaultValue="@null" app:argType="string" app:nullable="true" />
        <argument android:name="link" android:defaultValue="" app:argType="string" />
        <argument android:name="drmType" android:defaultValue="default" app:argType="string" />
        <argument android:name="drmLicence" android:defaultValue="" app:argType="string" />
        <argument android:name="fullscreen" android:defaultValue="false" app:argType="boolean" />
        <argument android:name="headers" android:defaultValue="@null" app:argType="java.io.Serializable" app:nullable="true" />
        <argument android:name="fromEvent" android:defaultValue="false" app:argType="boolean" />
        <argument android:name="fromHighlights" android:defaultValue="false" app:argType="boolean" />
    </activity>
    <navigation android:id="@id/playlist_nav" app:startDestination="@id/playlistFragment">
        <fragment android:label="@string/playlists" android:name="app.blaze.spofficialApp.fragments.PlaylistFragment" android:id="@id/playlistFragment">
            <argument android:name="title" app:argType="string" />
            <argument android:name="item" app:argType="app.blaze.spofficialApp.models.M3UPlaylist" />
            <action android:id="@id/action_playlistFragment_to_categorySelectionFragment" app:destination="@id/categorySelectionFragment" />
        </fragment>
        <dialog android:label="@string/chose_category" android:name="app.blaze.spofficialApp.fragments.CategorySelectionFragment" android:id="@id/categorySelectionFragment" />
        <argument android:name="title" app:argType="string" />
        <argument android:name="item" app:argType="app.blaze.spofficialApp.models.M3UPlaylist" />
        <action android:id="@id/action_playlistFragment_to_categorySelectionFragment" app:destination="@id/categorySelectionFragment" />
    </navigation>
    <dialog android:label="@string/app_name" android:name="app.blaze.spofficialApp.fragments.UpdateDialogFragment" android:id="@id/updateDialogFragment" />
    <action android:id="@id/action_global_updateDialogFragment" app:destination="@id/updateDialogFragment" />
    <dialog android:label="AdFragment" android:name="app.blaze.spofficialApp.fragments.AdFragment" android:id="@id/adFragment" />
    <action android:id="@id/action_global_adFragment" app:destination="@id/adFragment" />
    <action android:id="@id/action_global_networkFragment" app:destination="@id/networkFragment" />
    <fragment android:label="@string/favourties" android:name="app.blaze.spofficialApp.fragments.FavTabFragment" android:id="@id/favTabFragment" />
    <action android:id="@id/action_global_favTabFragment" app:destination="@id/favTabFragment" />
    <fragment android:label="@string/favourties" android:name="app.blaze.spofficialApp.fragments.FavFragmentTV" android:id="@id/favFragmentTV">
        <action android:id="@id/action_favFragmentTV_self" app:destination="@id/favFragmentTV" />
    </fragment>
    <action android:id="@id/action_global_favFragmentTV" app:destination="@id/favFragmentTV" />
</navigation>
