<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/secondary_color" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingTop="12.0dp" android:paddingBottom="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="8.0dp" android:paddingEnd="16.0dp">
        <ImageView android:id="@id/backButton" android:background="?selectableItemBackgroundBorderless" android:padding="10.0dp" android:layout_width="44.0dp" android:layout_height="44.0dp" android:src="@drawable/ic_back" android:contentDescription="@string/back" app:tint="@color/white" />
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/data_usage" android:layout_weight="1.0" android:layout_marginStart="8.0dp" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingTop="6.0dp" android:paddingBottom="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="30.0sp" android:textStyle="bold" android:textColor="@color/primary_color" android:id="@id/todayValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0 B" />
        <TextView android:textSize="13.0sp" android:textColor="#b3ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dp" android:text="@string/data_usage_today" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="@drawable/header_background" android:paddingTop="16.0dp" android:paddingBottom="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dp" android:layout_marginTop="4.0dp" android:layout_marginRight="16.0dp">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/usage_mobile" android:id="@id/mobileValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0 B" />
            <TextView android:textSize="12.0sp" android:textColor="#b3ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dp" android:text="@string/data_usage_mobile" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/usage_wifi" android:id="@id/wifiValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0 B" />
            <TextView android:textSize="12.0sp" android:textColor="#b3ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dp" android:text="@string/data_usage_wifi" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/primary_color" android:id="@id/totalValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0 B" />
            <TextView android:textSize="12.0sp" android:textColor="#b3ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dp" android:text="@string/data_usage_total" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dp">
        <TextView android:id="@id/chip7" android:text="@string/data_usage_7d" style="@style/UsageChip" />
        <TextView android:id="@id/chip30" android:text="@string/data_usage_30d" style="@style/UsageChip" />
        <TextView android:id="@id/chipYear" android:text="@string/data_usage_1y" style="@style/UsageChip" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dp">
        <View android:background="@drawable/bg_legend_dot" android:layout_width="10.0dp" android:layout_height="10.0dp" android:backgroundTint="@color/usage_mobile" />
        <TextView android:textSize="12.0sp" android:textColor="#ccffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/data_usage_mobile" android:layout_marginStart="5.0dp" android:layout_marginEnd="16.0dp" />
        <View android:background="@drawable/bg_legend_dot" android:layout_width="10.0dp" android:layout_height="10.0dp" android:backgroundTint="@color/usage_wifi" />
        <TextView android:textSize="12.0sp" android:textColor="#ccffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/data_usage_wifi" android:layout_marginStart="5.0dp" android:layout_marginEnd="16.0dp" />
        <View android:background="@drawable/bg_legend_dot" android:layout_width="10.0dp" android:layout_height="10.0dp" android:backgroundTint="@color/usage_other" />
        <TextView android:textSize="12.0sp" android:textColor="#ccffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/data_usage_other" android:layout_marginStart="5.0dp" />
    </LinearLayout>
    <FrameLayout android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0">
        <HorizontalScrollView android:layout_gravity="center" android:id="@id/chartScroll" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="240.0dp" android:layout_marginLeft="12.0dp" android:layout_marginRight="12.0dp" android:fillViewport="true" android:overScrollMode="never">
            <app.blaze.spofficialApp.activities.DataUsageBarChartView android:id="@id/chart" android:layout_width="wrap_content" android:layout_height="match_parent" />
        </HorizontalScrollView>
    </FrameLayout>
    <TextView android:textSize="11.0sp" android:textColor="#80ffffff" android:gravity="center" android:id="@id/emptyHint" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dp" android:layout_marginRight="16.0dp" android:layout_marginBottom="16.0dp" android:text="@string/data_usage_hint" />
</LinearLayout>
